# slambook_python

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pose_estimation_3d2d.py  pyproject.toml  simStereoCamera.py  testRefine.py  triangulation_2d3d2d.py  utils.py
.github/workflows/: tests.yml
data/: README.md
docs/: coordinates.md  datasets.md  notes.md  porting.md  status.md  validation.md
docs/adr/: 0001-python-native-loop-and-map-backends.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: slambook-python-migration-plan.md
docs/research/: python-slam-library-stack-2026.md
examples/ch10_bundle_adjustment/: pycolmap_reference.py  scipy_bal.py  tiny_bal.txt
examples/ch11_pose_graph/: optimize_pose_graph.py  tiny_pose_graph.g2o
examples/ch12_loop_closure/: README.md  build_descriptors.py  retrieve_candidates.py  train_vocabulary.py
examples/ch13_dense_mapping/: README.md  monocular_depth.py  rgbd_fusion.py
examples/ch3_geometry/: transforms.py
examples/ch4_lie/: exp_log.py
examples/ch5_camera_image/: image_basics.py  rgbd_pointcloud.py
examples/ch6_optimization/: curve_fitting.py
examples/ch7_feature_vo/: README.md  ch7_common.py  compare_matchers.py  pose_estimation_2d2d.py  pose_estimation_3d2d.py  pose_estimation_3d3d.py  triangulation.py
examples/ch8_direct_vo/: direct_sparse.py  lk_flow.py
examples/ch9_project/: config.yaml  run_local_map_vo.py  run_vo.py
examples/reference/: benchmark_report.py  pycolmap_reconstruction.py  validate_upstream_samples.py
legacy/: README.md  flann_based_matcher.py  pose_estimation_2d2d.py  ransac_test.py  utils.py
slam/: __init__.py
slam/camera/: __init__.py  pinhole.py  stereo.py
slam/evaluation/: __init__.py  metrics.py
slam/features/: __init__.py  base.py  learned_features.py  opencv_features.py
slam/geometry/: __init__.py  lie.py  masks.py  registration.py  transforms.py  triangulation.py
slam/io/: __init__.py  datasets.py  image_retrieval.py  trajectory.py
slam/mapping/: __init__.py  monocular_dense.py  pointcloud.py  rgbd.py
slam/optimization/: __init__.py  (+6 more)
tests_optional/: README.md  test_backend_imports.py
(+43 files in other folders)
